--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,8 @@
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal" />
 
+
+
         <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
@@ -36,6 +38,15 @@
             android:layout_margin="15dp"
             android:hint="Enter password"
             android:inputType="textPassword" />
+
+        <ProgressBar
+            android:id="@+id/progressBar_cyclic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minHeight="50dp"
+            android:minWidth="50dp"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
         <Button
             android:id="@+id/buttonSignup"
